<resources>
    <string name="app_name">BlogNews</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="save">Salvar</string>
    <string name="login">Login</string>
    <string name="stymulus_to_create_account">
        <u>Não tem conta? Cadastre-se aqui.</u>
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_log_out">Sair</string>
    <string name="tvStymulusLogin">
        <u>Já tem cadastro? Clique aqui para logar.</u>
    </string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="write_comment">Faça um comentário</string>
    <string name="recover_password">
        <u>Esqueceu a senha? Clique aqui.</u>
    </string>

    <string name="toast_message">"Campo comentário está vazio."</string>
    <string name="invalid_email">"Campo email inválido. Preencha-o para logar"</string>

</resources>
