<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity">

    <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etName"
            android:src="@drawable/userphoto"
            android:layout_margin="8dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/ivUser" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>

    <EditText
            android:background="@drawable/custom_field_edittext"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/etName"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"/>
    <EditText
            android:background="@drawable/custom_field_edittext"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <EditText
            android:background="@drawable/custom_field_edittext"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <EditText
            android:background="@drawable/custom_field_edittext"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repita_a_senha"
            android:ems="10"
            android:id="@+id/etConfirmPassword"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"/>
    <Button
            android:text="@string/save"
            android:textColor="#fff"
            android:background="@drawable/custom_bg_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="@+id/btnSave"
            app:layout_constraintTop_toTopOf="@+id/btnSave"
            app:layout_constraintBottom_toBottomOf="@+id/btnSave"/>
    <TextView
            android:id="@+id/tvStymulusLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            android:text="@string/tvStymulusLogin"
            android:textColor="#000"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>